# pokerHands

./: .gitignore  CMakeLists.txt  README.md  main.cpp
PokerHands/: CMakeLists.txt  Game.hpp
PokerHands/Core/: CMakeLists.txt  Game.cpp  Game.hpp
PokerHands/Entity/: CMakeLists.txt  Dealer.cpp  Dealer.hpp  Player.cpp  Player.hpp
PokerHands/Manager/: CMakeLists.txt  ScreenManager.cpp  ScreenManager.hpp
PokerHands/Player/: CMakeLists.txt  Player.cpp  Player.hpp
PokerHands/Screen/: BaseScreen.cpp  BaseScreen.hpp  CMakeLists.txt  GameScreen.cpp  GameScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  ScreenType.cpp  Window.cpp  Window.h  Window.hpp
PokerHands/Tools/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.hpp
tests/: CMakeLists.txt  main_tests.cpp
